change spawn location, inventory's label to khmer

--- a/[qb]/qb-core/html/index.html
+++ b/[qb]/qb-core/html/index.html
@@ -35,7 +35,7 @@
   <body style="font-family: 'Poppins', sans-serif">
     <div
       id="q-app"
-      style="min-height: 100vh"
+      style="min-height: 100vh;z-index: 88;"
     ></div>
   </body>
 </html>
