--- a/[qb]/qb-inventory/html/ui.html
+++ b/[qb]/qb-inventory/html/ui.html
@@ -18,7 +18,7 @@
         <div id="qbcore-inventory">
             <div class="inventory-info">
                 <div class="player-inv-info">
-                    <span id="player-inv-label">Player Inventory</span><br>
+                    <span id="player-inv-label">សារពើភ័ណ្ឌ</span><br>
                     <span id="player-inv-weight"></span>
                 </div>
                 <div class="other-inv-info">
@@ -33,9 +33,9 @@
                 <div class="inv-options">
                     <div class="inv-options-list">
                         <input type="number" id="item-amount" class="inv-option-item" min=0 value="0" oninput="validity.valid||(value='');"></input>
-                        <div class="inv-option-item" id="item-use"><p>USE</p></div>
-                        <div class="inv-option-item" id="item-give"><p>GIVE</p></div>
-                        <div class="inv-option-item" id="inv-close"><p>CLOSE</p></div>
+                        <div class="inv-option-item" id="item-use"><p>ប្រើ</p></div>
+                        <div class="inv-option-item" id="item-give"><p>ឲទៅ</p></div>
+                        <div class="inv-option-item" id="inv-close"><p>បិទ</p></div>
                     </div>
                 </div>
                 <div class="oth-inv-container">
