--- a/[qb]/qb-radialmenu/html/index.html
+++ b/[qb]/qb-radialmenu/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8"/>)
+    <meta charset="UTF-16" />
     <title>Radial Menu</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <script src="js/RadialMenu.js" type="text/javascript" charset="UTF-8"></script>
-    <script src="js/main.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="js/RadialMenu.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
